<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <packaging>pom</packaging>

    <properties>
        <scala.version>2.9.2</scala.version>
        <scala.maven.plugin.version>3.1.0</scala.maven.plugin.version>
        <simplespec.version>0.8.4</simplespec.version>
        <versions.maven.plugin.version>1.3.1</versions.maven.plugin.version>
    </properties>

    <groupId>us.wa.hanford</groupId>
    <artifactId>hanford-parent</artifactId>
    <version>1.0.0</version>
    <name>hanford</name>

    <dependencies>
        <!-- Test deps -->
        <dependency>
            <groupId>com.simple</groupId>
            <artifactId>simplespec_${scala.version}</artifactId>
            <version>0.7.0</version>
        </dependency>
    </dependencies>

    <modules>
        <module>hanford-reactor</module>
        <module>hanford-cleanup</module>
    </modules>

    <profiles>
        <profile>
            <id>coverage</id>
            <dependencies>
                <dependency>
                    <groupId>com.github.scct</groupId>
                    <artifactId>scct_2.9.2</artifactId>
                    <version>0.2</version>
                </dependency>
            </dependencies>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>2.13</version>
                        <configuration>
                            <systemPropertyVariables>
                                <scct.project.name>${project.name}</scct.project.name>
                                <scct.coverage.file>${project.build.outputDirectory}/coverage.data</scct.coverage.file>
                                <scct.report.dir>${project.build.directory}/coverage-report</scct.report.dir>
                                <scct.source.dir>${project.build.sourceDirectory}</scct.source.dir>
                            </systemPropertyVariables>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>net.alchim31.maven</groupId>
                        <artifactId>scala-maven-plugin</artifactId>
                        <version>${scala.maven.plugin.version}</version>
                        <executions>
                            <execution>
                                <id>main-scalac</id>
                                <configuration>
                                    <compilerPlugins>
                                        <compilerPlugin>
                                            <groupId>com.github.scct</groupId>
                                            <artifactId>scct_2.9.2</artifactId>
                                            <version>0.2</version>
                                        </compilerPlugin>
                                    </compilerPlugins>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>${versions.maven.plugin.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>set</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>net.alchim31.maven</groupId>
                <artifactId>scala-maven-plugin</artifactId>
                <version>${scala.maven.plugin.version}</version>
                <executions>
                    <execution>
                        <id>main-scalac</id>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>test-scalac</id>
                        <goals>
                            <goal>testCompile</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <jvmArgs>
                        <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
                        <jvmArg>-XX:+CMSClassUnloadingEnabled</jvmArg>
                        <jvmArg>-XX:+CMSPermGenSweepingEnabled</jvmArg>
                    </jvmArgs>
                    <recompileMode>incremental</recompileMode>
                    <args>
                        <arg>-unchecked</arg>
                        <arg>-deprecation</arg>
                    </args>
                    <charset>UTF-8</charset>
                    <launchers>
                        <launcher>
                            <id>server</id>
                            <mainClass>${service.mainclass}</mainClass>
                            <args>
                                <arg>server</arg>
                                <arg>conf/service/${project.name}-local.yml</arg>
                            </args>
                        </launcher>
                    </launchers>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.0</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                    <encoding>UTF-8</encoding>
                    <fork>true</fork>
                    <compilerArgs>-Xmx2048m</compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.6</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.13</version>
                <configuration>
                    <useSystemClassLoader>false</useSystemClassLoader>
                    <argLine>-Xmx2048m</argLine>
                    <forkMode>never</forkMode>
                    <useFile>false</useFile>
                    <includes>
                        <include>**/*Spec.java</include>
                    </includes>
                    <excludes>
                        <exclude>**/*Test.java</exclude>
                    </excludes>
                </configuration>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>2.0</version>
                    <configuration>
                        <createDependencyReducedPom>true</createDependencyReducedPom>
                    </configuration>
                    <executions>
                        <execution>
                            <phase>package</phase>
                            <goals>
                                <goal>shade</goal>
                            </goals>
                            <configuration>
                                <transformers>
                                    <transformer
                                        implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                                    <transformer
                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                        <mainClass>${service.mainclass}</mainClass>
                                    </transformer>
                                </transformers>
                                <filters>
                                    <filter>
                                        <artifact>*</artifact>
                                        <excludes>
                                            <exclude>META-INF/*.SF</exclude>
                                            <exclude>META-INF/*.RSA</exclude>
                                            <exclude>META-INF/*.INF</exclude>
                                        </excludes>
                                    </filter>
                                </filters>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
        <extensions>
            <extension>
                <groupId>org.apache.maven.wagon</groupId>
                <artifactId>wagon-ssh</artifactId>
                <version>2.3</version>
            </extension>
        </extensions>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <includes>
                    <include>**/*</include>
                </includes>
            </resource>
        </resources>
    </build>

    <reporting>
        <plugins>
            <plugin>
                <groupId>net.alchim31.maven</groupId>
                <artifactId>scala-maven-plugin</artifactId>
                <version>${scala.maven.plugin.version}</version>
            </plugin>
        </plugins>
    </reporting>
</project>
